EIP1-9649: Add endponint for fetching details for a sent communication
