# src/main/kotlin/uk/gov/dluhc/notificationsapi/dto/NotifyDetailsDto.kt
@@ -1,0 +1,14 @@
+package uk.gov.dluhc.notificationsapi.dto
+
+import java.util.UUID
+
+data class NotifyDetails(
+    var notificationId: UUID,
+    var reference: String,
+    var templateId: UUID,
+    var templateVersion: Int,
+    var templateUri: String,
+    var body: String,
+    var subject: String,
+    var fromEmail: String,
+)
