# src/main/kotlin/uk/gov/dluhc/notificationsapi/rest/SentCommunicationsController.kt
@@ -7,10 +7,13 @@ import org.springframework.web.bind.annotation.PathVariable
 import org.springframework.web.bind.annotation.RequestMapping
 import org.springframework.web.bind.annotation.RequestParam
 import org.springframework.web.bind.annotation.RestController
+import uk.gov.dluhc.notificationsapi.mapper.NotificationApiMapper
 import uk.gov.dluhc.notificationsapi.mapper.NotificationSummaryMapper
 import uk.gov.dluhc.notificationsapi.mapper.SourceTypeMapper
 import uk.gov.dluhc.notificationsapi.models.CommunicationsHistoryResponse
+import uk.gov.dluhc.notificationsapi.models.SentCommunicationResponse
 import uk.gov.dluhc.notificationsapi.service.SentNotificationsService
+import java.util.UUID
 import uk.gov.dluhc.notificationsapi.models.SourceType as SourceTypeApi
 
 /**
@@ -22,6 +25,7 @@ import uk.gov.dluhc.notificationsapi.models.SourceType as SourceTypeApi
 class SentCommunicationsController(
     private val sentNotificationsService: SentNotificationsService,
     private val notificationSummaryMapper: NotificationSummaryMapper,
+    private val notificationApiMapper: NotificationApiMapper,
     private val sourceTypeMapper: SourceTypeMapper
 ) {
 
@@ -40,5 +44,20 @@ class SentCommunicationsController(
             notificationSummaryMapper.toCommunicationsSummaryApi(it)
         }.let {
             CommunicationsHistoryResponse(communications = it)
+        }
+
+    @GetMapping("{communicationId}/")
+    @PreAuthorize(HAS_APPLICATION_SPECIFIC_ERO_ADMIN_AUTHORITY)
+    fun getSentCommunication(
+        @PathVariable eroId: String,
+        @PathVariable communicationId: String,
+        @RequestParam(required = false, defaultValue = "voter-card") sourceType: SourceTypeApi
+    ): SentCommunicationResponse =
+        sentNotificationsService.getNotificationByIdEroAndType(
+            notificationId = UUID.fromString(communicationId),
+            eroId = eroId,
+            sourceType = sourceTypeMapper.fromApiToDto(sourceType)
+        ).let {
+            notificationApiMapper.toSentCommunicationsApi(it)
         }
 }
